--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,18 @@ fabric_version=0.79.0+1.19.4
 lombok_version=1.18.26
 
 # sib-energy-craft libs
-sec_energy_api_version=0.0.3
+sec_energy_api_version=0.0.4
 sec_utils_version=0.0.4
+sec_energy_containers_api_version=0.0.3
+sec_energy_machines_api_version=0.0.7
+
+sec_mod_tools_api_version=0.0.1
+sec_mod_iron_craft_table_api_version=0.0.1
+
+sec_mod_recipies_version=0.0.2
+sec_mod_ores_version=0.0.1
+sec_mod_metallurgy_version=0.0.6
+sec_mod_tools_impl_version=0.0.1
 sec_mod_energy_items_version=0.0.1
+sec_mod_rubber_version=0.0.2
 sec_mod_machines_version=0.0.3
